[package]
name = "distilled"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@pm.me>"]
edition = "2018"

[dependencies]
nanoserde = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = { version = "1.0.0-alpha4", default-features = false, optional = false, features = ["jit", "cranelift"] }
wasmer-wasi = { version = "1.0.0-alpha4", default-features = false, optional = false }
wasmer-vm = { version = "1.0.0-alpha4", default-features = false, optional = false }
anyhow = "1.0"
smol = "1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4"

[profile.release]
lto = true