[package]
name = "wasm"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@pm.me>"]
edition = "2018"

[dependencies]
nanoserde = "0.1.19"
distilled = { path = ".." }
distilled-derive = { path = "../distilled-derive" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.32"
smol = "1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4"